--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Wikipedia-like application for users to create, collaborate, and share wikis.",
   "main": "src/server.js",
   "scripts": {
-    "test": "export NODE_ENV=test && jasmine"
+    "test": "export NODE_ENV=test && jasmine",
+    "start": "node src/server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,18 @@
   "bugs": {
     "url": "https://github.com/lfirebrand/blocipedia-node/issues"
   },
-  "homepage": "https://github.com/lfirebrand/blocipedia-node#readme"
+  "homepage": "https://github.com/lfirebrand/blocipedia-node#readme",
+  "devDependencies": {
+    "jasmine": "^3.0.0",
+    "request": "^2.83.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "dotenv": "^5.0.0",
+    "express": "^4.16.2",
+    "morgan": "^1.9.1",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.32.6"
+  }
 }
